Handle focusability for plugin elements which has browsing context

If <object> or <embed> has HTML/SVG contents,
focus navigation within documents under these
elements should work.

This has been working fine for <iframe>s.

The FocusController code checks for FrameOwnerElement,
which is parent of <iframe>, <object>, and <embed> if
it is isKeyboardFocusable() and has contentFrame().

HTMLPluginElement::isKeyboardFocsuable() didn't handle
the cases with HTML/SVG contents, only considered plugins.

BUG=620488

Review-Url: https://codereview.chromium.org/2129863002
Cr-Commit-Position: refs/heads/master@{#404324}

Former-commit-id: a2c82afad86cf4f85f91df76f858434b15fe6b13